--- a/package.json
+++ b/package.json
@@ -44,16 +44,16 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@types/react": "^16.9.34",
     "@types/webpack": "^4.41.12",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-register": "^6.26.0",
     "compression-webpack-plugin": "^3.0.1",
+    "concurrently": "^5.2.0",
     "copy-webpack-plugin": "^5.1.1",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^6.8.0",
@@ -64,14 +64,13 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
-    "esm": "^3.2.25",
-    "html-webpack-plugin": "^4.2.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.0",
     "nodemon": "^2.0.3",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
+    "terser-webpack-plugin": "^2.3.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
@@ -81,16 +80,14 @@
     "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "^4.9.12",
     "@oly_op/react-bem": "^1.0.9",
-    "@types/react": "^16.9.34",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.17",
     "apollo-server-express": "^2.12.0",
     "apollo-upload-client": "^13.0.0",
-    "aws-sdk": "^2.663.0",
+    "aws-sdk": "^2.665.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "concurrently": "^5.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "css-loader": "^3.5.3",
@@ -102,6 +99,7 @@
     "graphql-tag": "^2.10.3",
     "graphql-upload": "^10.0.0",
     "helmet": "^3.22.0",
+    "html-webpack-plugin": "^4.2.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
@@ -114,10 +112,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
-    "response-time": "^2.3.2",
     "sharp": "^0.25.2",
-    "terser-webpack-plugin": "^2.3.6",
-    "uuid": "^7.0.3",
-    "validator": "^13.0.0"
+    "uuid": "^7.0.3"
   }
 }
