--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.3.3",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-webpack-plugin": "^2.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "write-file-webpack-plugin": "^4.5.1"
