--- a/package.json
+++ b/package.json
@@ -51,8 +51,11 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.0.2",
+		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
+		"@material-ui/pickers": "^3.2.10",
+		"@material-ui/styles": "^4.10.0",
 		"@oly_op/bem": "^2.4.0",
 		"@oly_op/music-app-common": "^1.8.0",
 		"@oly_op/pipe": "^2.1.8",
@@ -115,7 +118,7 @@
 		"concurrently": "^5.2.0",
 		"copy-webpack-plugin": "^6.0.3",
 		"cross-env": "^7.0.2",
-		"css-loader": "^3.6.0",
+		"css-loader": "^4.0.0",
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^2.0.0",
 		"eslint": "^7.5.0",
