--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ node_modules/
 
 # files
 .env
+src/common/bufferToDataUrl.js
+src/common/bufferToDataUrl.d.ts
+src/common/deserializeDuration.js
+src/common/deserializeDuration.d.ts
