--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
 		"@oly_op/pipe": "^3.1.0",
 		"apollo-server-express": "^2.16.1",
 		"apollo-upload-client": "^14.1.1",
-		"aws-sdk": "^2.730.0",
+		"aws-sdk": "^2.732.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
@@ -74,6 +74,7 @@
 		"helmet": "^4.0.0",
 		"lodash": "^4.17.19",
 		"morgan": "^1.10.0",
+		"music-metadata": "^7.0.1",
 		"music-metadata-browser": "^2.1.1",
 		"pg": "^8.3.0",
 		"react": "^16.13.1",
@@ -107,7 +108,7 @@
 		"@types/react-dom": "^16.9.8",
 		"@types/react-router-dom": "^5.1.5",
 		"@types/sharp": "^0.25.1",
-		"@types/uuid": "^8.0.1",
+		"@types/uuid": "^8.3.0",
 		"@types/webpack": "^4.41.21",
 		"@types/webpack-bundle-analyzer": "^3.8.0",
 		"@types/webpack-dev-server": "^3.11.0",
@@ -115,7 +116,7 @@
 		"@types/write-file-webpack-plugin": "^4.5.0",
 		"@typescript-eslint/eslint-plugin": "^3.9.0",
 		"@typescript-eslint/parser": "^3.9.0",
-		"compression-webpack-plugin": "^4.0.0",
+		"compression-webpack-plugin": "^4.0.1",
 		"concurrently": "^5.3.0",
 		"cross-env": "^7.0.2",
 		"css-loader": "^4.2.1",
@@ -127,7 +128,7 @@
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.20.5",
+		"eslint-plugin-react": "^7.20.6",
 		"eslint-plugin-react-hooks": "^4.0.7",
 		"graphql": "^15.3.0",
 		"html-webpack-plugin": "^4.3.0",
