--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"apollo-upload-client": "^14.1.1",
 		"aws-sdk": "^2.736.0",
 		"body-parser": "^1.19.0",
+		"cheerio": "^1.0.0-rc.3",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
@@ -77,6 +78,7 @@
 		"morgan": "^1.10.0",
 		"music-metadata": "^7.0.2",
 		"music-metadata-browser": "^2.1.2",
+		"node-fetch": "^2.6.0",
 		"pg": "^8.3.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
@@ -90,6 +92,7 @@
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^8.1.3",
 		"@types/body-parser": "^1.19.0",
+		"@types/cheerio": "^0.22.21",
 		"@types/compression": "^1.7.0",
 		"@types/compression-webpack-plugin": "^4.0.0",
 		"@types/concurrently": "^5.2.1",
