--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"delete-build": "rm -r -f dist",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master",
-		"publish-types": "cd src/types && npm publish && cd ../..",
+		"publish-types": "cd src/types && npm publish && cd ../.. && npm i -S -D @oly_op/music-app-common@latest",
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
@@ -65,7 +65,6 @@
 		"apollo-upload-client": "^14.1.1",
 		"aws-sdk": "^2.736.0",
 		"body-parser": "^1.19.0",
-		"cheerio": "^1.0.0-rc.3",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
@@ -88,17 +87,16 @@
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.10.5",
-		"@oly_op/music-app-types": "^1.2.0",
+		"@oly_op/music-app-types": "^1.3.0",
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^8.1.3",
 		"@types/body-parser": "^1.19.0",
-		"@types/cheerio": "^0.22.21",
 		"@types/compression": "^1.7.0",
 		"@types/compression-webpack-plugin": "^4.0.0",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/dotenv-webpack": "^1.8.0",
-		"@types/eslint": "^7.2.0",
+		"@types/eslint": "^7.2.1",
 		"@types/express": "^4.17.7",
 		"@types/helmet": "0.0.47",
 		"@types/lodash": "^4.14.159",
