--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"delete-build": "rm -r -f dist",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master",
-		"publish-types": "cd src/types && npm publish && cd ../.. && npm i -S -D @oly_op/music-app-common@latest",
+		"publish-types": "cd src/types && npm publish && cd ../.. && npm i -S -D @oly_op/music-app-types@latest",
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
@@ -59,7 +59,6 @@
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/pickers": "^3.2.10",
 		"@oly_op/bem": "^2.4.0",
-		"@oly_op/music-app-common": "^5.0.1",
 		"@oly_op/pipe": "^3.1.0",
 		"apollo-server-express": "^2.16.1",
 		"apollo-upload-client": "^14.1.1",
@@ -87,7 +86,8 @@
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.10.5",
-		"@oly_op/music-app-types": "^1.3.0",
+		"@oly_op/music-app-common": "^5.0.1",
+		"@oly_op/music-app-types": "^1.4.0",
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^8.1.3",
 		"@types/body-parser": "^1.19.0",
