--- a/package.json
+++ b/package.json
@@ -53,16 +53,16 @@
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.1.3",
+		"@apollo/client": "^3.1.4",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/pickers": "^3.2.10",
 		"@oly_op/bem": "^2.4.0",
 		"@oly_op/pipe": "^3.1.0",
-		"apollo-server-express": "^2.16.1",
+		"apollo-server-express": "^2.17.0",
 		"apollo-upload-client": "^14.1.1",
-		"aws-sdk": "^2.736.0",
+		"aws-sdk": "^2.742.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
@@ -77,10 +77,11 @@
 		"music-metadata": "^7.0.2",
 		"music-metadata-browser": "^2.1.2",
 		"node-fetch": "^2.6.0",
-		"pg": "^8.3.2",
+		"pg": "^8.3.3",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
+		"react-waypoint": "^9.0.3",
 		"sharp": "^0.26.0",
 		"uuid": "^8.3.0"
 	},
@@ -89,24 +90,24 @@
 		"@oly_op/music-app-common": "^5.0.1",
 		"@oly_op/music-app-types": "^1.5.0",
 		"@playlyfe/gql": "^2.6.2",
-		"@types/apollo-upload-client": "^8.1.3",
+		"@types/apollo-upload-client": "^14.1.0",
 		"@types/body-parser": "^1.19.0",
 		"@types/compression": "^1.7.0",
 		"@types/compression-webpack-plugin": "^4.0.0",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/dotenv-webpack": "^1.8.0",
-		"@types/eslint": "^7.2.1",
+		"@types/eslint": "^7.2.2",
 		"@types/express": "^4.17.7",
 		"@types/helmet": "0.0.48",
-		"@types/lodash": "^4.14.160",
+		"@types/lodash": "^4.14.161",
 		"@types/mini-css-extract-plugin": "^0.9.1",
 		"@types/morgan": "^1.9.1",
-		"@types/node": "^14.6.0",
+		"@types/node": "^14.6.2",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.4",
-		"@types/react": "^16.9.47",
+		"@types/react": "^16.9.48",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-router-dom": "^5.1.5",
 		"@types/sharp": "^0.25.1",
@@ -134,7 +135,7 @@
 		"eslint-plugin-react-hooks": "^4.1.0",
 		"graphql": "^15.3.0",
 		"html-webpack-plugin": "^4.3.0",
-		"mini-css-extract-plugin": "^0.10.0",
+		"mini-css-extract-plugin": "^0.11.0",
 		"nodemon": "^2.0.4",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
 		"sass": "^1.26.10",
@@ -147,7 +148,7 @@
 		"stylelint-webpack-plugin": "^2.1.0",
 		"ts-loader": "^8.0.3",
 		"ts-node": "^9.0.0",
-		"typescript": "^3.9.7",
+		"typescript": "^4.0.2",
 		"webpack": "^4.44.1",
 		"webpack-bundle-analyzer": "^3.8.0",
 		"webpack-cli": "^3.3.12",
