--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
 		"strict": true,
 		"outDir": "dist",
 		"sourceMap": true,
-		"target": "ESNEXT",
+		"target": "ES2019",
 		"noImplicitAny": true,
 		"removeComments": true,
 		"noUnusedLocals": true,
 		"esModuleInterop": true,
 		"strictNullChecks": true,
+		"noImplicitReturns": true,
 		"moduleResolution": "Node",
 		"noUnusedParameters": true,
 		"strictFunctionTypes": true,
