--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,7 @@
 	"editor.find.autoFindInSelection": "never",
 	"terminal.integrated.windowsEnableConpty": false,
 	"editor.fontFamily": "Liberation Mono, monospace",
-	"typescript.tsdk": "./node_modules/typescript/lib",
+	"typescript.tsdk": "c:\\code\\music-app\\node_modules\\typescript\\lib",
 	"javascript.updateImportsOnFileMove.enabled": "never",
 	"terminal.integrated.fontFamily": "Liberation Mono, monospace",
 	"terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
