--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.2.0",
+		"@apollo/client": "^3.2.1",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
@@ -62,7 +62,7 @@
 		"@oly_op/music-app-common": "^5.1.1",
 		"@oly_op/pipe": "^3.1.0",
 		"@reduxjs/toolkit": "^1.4.0",
-		"apollo-server-express": "^2.17.0",
+		"apollo-server-express": "^2.18.0",
 		"apollo-upload-client": "^14.1.2",
 		"aws-sdk": "^2.756.0",
 		"body-parser": "^1.19.0",
@@ -83,6 +83,7 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.1",
+		"react-ripples": "^2.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-waypoint": "^9.0.3",
 		"sharp": "^0.26.1",
@@ -99,14 +100,14 @@
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/dotenv-webpack": "^3.0.0",
-		"@types/eslint": "^7.2.2",
+		"@types/eslint": "^7.2.3",
 		"@types/express": "^4.17.8",
 		"@types/graphql-upload": "^8.0.4",
 		"@types/helmet": "0.0.48",
 		"@types/lodash": "^4.14.161",
 		"@types/mini-css-extract-plugin": "^0.9.1",
 		"@types/morgan": "^1.9.1",
-		"@types/node": "^14.11.1",
+		"@types/node": "^14.11.2",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.5",
@@ -138,7 +139,7 @@
 		"eslint-plugin-react": "^7.20.6",
 		"eslint-plugin-react-hooks": "^4.1.0",
 		"graphql": "^15.3.0",
-		"html-webpack-plugin": "^4.4.1",
+		"html-webpack-plugin": "^4.5.0",
 		"kill-port": "^1.6.1",
 		"mini-css-extract-plugin": "^0.11.2",
 		"nodemon": "^2.0.4",
