--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,3 @@
 {
-	"root": true,
-	"parser": "@typescript-eslint/parser",
-	"extends": [
-		"airbnb-typescript",
-		"airbnb/hooks",
-		"plugin:@typescript-eslint/eslint-recommended",
-		"plugin:@typescript-eslint/recommended",
-		"plugin:@typescript-eslint/recommended-requiring-type-checking",
-		"plugin:promise/recommended",
-		"plugin:import/typescript",
-		"plugin:node/recommended",
-		"@oly_op/eslint-config"
-	],
-	"plugins": [
-		"node",
-		"import",
-		"promise",
-		"@typescript-eslint"
-	],
-	"parserOptions": {
-		"sourceType": "module",
-		"ecmaFeatures": { "jsx": true },
-		"project": "./tsconfig.eslint.json"
-	}
+	"extends": ["@oly_op/eslint-config"]
 }
