--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@material-ui/pickers": "^3.2.10",
 		"@oly_op/bem": "^2.10.0",
 		"@oly_op/music-app-common": "^6.7.2",
+		"@oly_op/pg-helpers": "^1.0.0",
 		"@oly_op/pipe": "^3.1.0",
 		"@reduxjs/toolkit": "^1.5.0",
 		"algoliasearch": "^4.8.4",
@@ -78,7 +79,7 @@
 		"dotenv": "^8.2.0",
 		"downshift": "^6.1.0",
 		"express": "^4.17.1",
-		"graphql": "^15.4.0",
+		"graphql": "^15.5.0",
 		"graphql-scalars": "^1.7.0",
 		"helmet": "^4.4.1",
 		"howler": "^2.2.1",
@@ -119,6 +120,7 @@
 		"@types/morgan": "^1.9.2",
 		"@types/node": "^14.14.22",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.2",
+		"@types/pg": "^7.14.9",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@types/react-redux": "^7.1.16",
@@ -159,7 +161,7 @@
 		"ts-loader": "^8.0.14",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.3",
-		"webpack": "^5.17.0",
+		"webpack": "^5.18.0",
 		"webpack-bundle-analyzer": "^4.4.0",
 		"webpack-cli": "^4.4.0",
 		"webpack-dev-server": "^3.11.2",
